--- a/css/home.css
+++ b/css/home.css
@@ -511,8 +511,7 @@
   height: 518px;
 }
 .Cta-section .Cta-section-right div {
-  width: 75%;
-  margin: 0 auto;
+  padding-left: 100px;
 }
 .Cta-section .Cta-section-right div h1 {
   color: #fff;
@@ -571,31 +570,224 @@
   padding-top: 20px;
 }
 .video-section .container .video-left .user {
-  display: flex;
-  padding-top: 20px;
-}
-.video-section .container .video-left .user img {
-  width: 70px;
-  height: 70px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.video-section .container .video-left .user div {
-  padding-left: 20px;
-}
-.video-section .container .video-left .user div h4 {
-  line-height: 0px;
-  padding-top: 20px;
-  font-size: 24 px;
-}
-.video-section .container .video-left .user div p {
-  line-height: 0px;
-  font-size: 16px;
-  color: #f58a07;
+  padding-top: 30px;
 }
 .video-section .container .video-right {
   width: 46%;
+  position: relative;
   height: 501px;
   background-image: url("../../assets/images/Ja'farxon_imaags/orangimg/v-2.png");
   border-radius: 0 18px 18px 0;
+}
+.video-section .container .video-right .play {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 40px;
+  left: 45px;
+}
+.video-section .container .video-right .play p {
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 101.8%;
+  padding-left: 20px;
+  padding-top: 13px;
+}
+.video-section .container .video-right .plays {
+  background-color: #fff;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.latest-section {
+  width: 100%;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  background: #dceaf5;
+}
+.latest-section .container .latest-section-cards {
+  display: flex;
+  justify-content: space-between;
+}
+.latest-section .container .latest-title {
+  color: #0d1317;
+  font-family: "Poppins", sans-serif;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 56px; /* 116.667% */
+  letter-spacing: -1.44px;
+  text-transform: capitalize;
+  padding-bottom: 50px;
+}
+.latest-section .container .section-card .s-card-blog {
+  width: 400px;
+  height: 277px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 20px 20px;
+  background: #fff;
+}
+.latest-section .container .section-card .s-card-blog div {
+  width: 85%;
+  margin: 0 auto;
+}
+.latest-section .container .section-card .s-card-blog div h4 {
+  color: #0d1317;
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 36px;
+  letter-spacing: -0.72px;
+  padding-top: 40px;
+}
+.latest-section .container .section-card .s-card-blog div p {
+  color: #5b5b5b;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+}
+
+.footer {
+  width: 100%;
+  background-color: #063255;
+  position: relative;
+}
+.footer .container {
+  padding-bottom: 50px;
+}
+.footer .container .foter-b {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.footer .container .foter-b p {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.footer .container .foter-b p:nth-child(2) {
+  padding-right: 20px;
+}
+.footer .container .foter-b p:nth-child(2) span {
+  padding-left: 50px;
+}
+.footer .container .footer-item {
+  display: flex;
+  padding-bottom: 50px;
+  justify-content: space-between;
+}
+.footer .container .footer-item .f-item1 {
+  width: 400px;
+  padding-top: 70px;
+}
+.footer .container .footer-item .f-item1 h1 {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 44px;
+  letter-spacing: -1.08px;
+  padding-top: 40px;
+}
+.footer .container .footer-item .f-item1 .tarmoqlar {
+  display: flex;
+  width: 150px;
+  justify-content: space-between;
+  padding-top: 30px;
+}
+.footer .container .footer-item .f-item1 .tarmoqlar svg {
+  cursor: pointer;
+}
+.footer .container .footer-item .f-item2 {
+  width: 150px;
+  padding-top: 70px;
+}
+.footer .container .footer-item .f-item2 p {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.footer .container .footer-item .f-item2 p:nth-child(1) {
+  font-size: 19px;
+}
+.footer .container .footer-item .f-item3 {
+  width: 300px;
+  padding-top: 70px;
+}
+.footer .container .footer-item .f-item3 p {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.footer .container .footer-item .f-item3 p:nth-child(1) {
+  font-size: 19px;
+}
+.footer .container .footer-item .f-item4 {
+  width: 350px;
+  padding-top: 70px;
+}
+.footer .container .footer-item .f-item4 p {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.footer .container .footer-item .f-item4 input {
+  width: 342px;
+  height: 54px;
+  flex-shrink: 0;
+  border-radius: 31px;
+  background: #fff;
+  border: none;
+  outline: none;
+  margin-top: 15px;
+  padding-left: 28px;
+}
+.footer .container .footer-item .f-item4 button {
+  width: 156px;
+  height: 54px;
+  flex-shrink: 0;
+  border-radius: 31px;
+  background: #f58a07;
+  border: none;
+  outline: none;
+  color: white;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  margin-top: 20px;
+}
+.footer .footer-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.footer .footer-right {
+  position: absolute;
+  right: 0;
+  top: 50px;
 }
