--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -522,8 +522,7 @@
     background: #f58a07;
     height: 518px;
     div {
-      width: 75%;
-      margin: 0 auto;
+      padding-left: 100px;
       h1 {
         color: #fff;
         width: 532px;
@@ -585,36 +584,243 @@
         padding-top: 20px;
       }
       .user {
-        display: flex;
-        padding-top: 20px;
-        img {
-          width: 70px;
-          height: 70px;
-          object-fit: cover;
-        }
-        div {
-          padding-left: 20px;
-          h4 {
-            line-height: 0px;
-            padding-top: 20px;
-            font-size: 24 px;
-          }
-          p {
-            line-height: 0px;
-            font-size: 16px;
-            color: #f58a07;
-          }
-        }
+        padding-top: 30px;
       }
     }
 
     .video-right {
       width: 46%;
+      position: relative;
       height: 501px;
       background-image: url("../../assets/images/Ja'farxon_imaags/orangimg/v-2.png");
       border-radius: 0 18px 18px 0;
+      .play {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        bottom: 40px;
+        left: 45px;
+        p {
+          color: #fff;
+          font-family: sans-serif;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 101.8%;
+          padding-left: 20px;
+          padding-top: 13px;
+        }
+      }
+      .plays {
+        background-color: #fff;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+      }
+    }
+  }
+}
+// Video Section
+
+// Latest Section
+
+.latest-section {
+  width: 100%;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  background: #dceaf5;
+  .container {
+    .latest-section-cards {
+      display: flex;
+      justify-content: space-between;
+    }
+    .latest-title {
+      color: #0d1317;
+      @include poppins;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 56px; /* 116.667% */
+      letter-spacing: -1.44px;
+      text-transform: capitalize;
+      padding-bottom: 50px;
+    }
+    .section-card {
+      .s-card-blog {
+        width: 400px;
+        height: 277px;
+        flex-shrink: 0;
+        border-radius: 0px 0px 20px 20px;
+        background: #fff;
+        div {
+          width: 85%;
+          margin: 0 auto;
+
+          h4 {
+            color: #0d1317;
+            @include poppins;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 36px;
+            letter-spacing: -0.72px;
+            padding-top: 40px;
+          }
+          p {
+            color: #5b5b5b;
+            @include poppins;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 28px;
+          }
+        }
+      }
     }
   }
 }
 
-// Video Section
+// Latest Section
+
+// Footer
+
+.footer {
+  width: 100%;
+  background-color: #063255;
+  position: relative;
+  .container {
+    padding-bottom: 50px;
+    .foter-b {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      p {
+        color: #fff;
+        @include poppins;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+      p:nth-child(2) {
+        padding-right: 20px;
+        span {
+          padding-left: 50px;
+        }
+      }
+    }
+    .footer-item {
+      display: flex;
+      padding-bottom: 50px;
+      justify-content: space-between;
+      .f-item1 {
+        width: 400px;
+        padding-top: 70px;
+        h1 {
+          color: #fff;
+          @include poppins;
+          font-size: 36px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 44px;
+          letter-spacing: -1.08px;
+          padding-top: 40px;
+        }
+        .tarmoqlar {
+          display: flex;
+          width: 150px;
+          justify-content: space-between;
+          padding-top: 30px;
+          svg {
+            cursor: pointer;
+          }
+        }
+      }
+      .f-item2 {
+        width: 150px;
+        padding-top: 70px;
+
+        p {
+          color: #fff;
+          @include poppins;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+        p:nth-child(1) {
+          font-size: 19px;
+        }
+      }
+      .f-item3 {
+        width: 300px;
+        padding-top: 70px;
+        p {
+          color: #fff;
+          @include poppins;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+        p:nth-child(1) {
+          font-size: 19px;
+        }
+      }
+      .f-item4 {
+        width: 350px;
+        padding-top: 70px;
+        p {
+          color: #fff;
+          @include poppins;
+          font-size: 19px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+        input {
+          width: 342px;
+          height: 54px;
+          flex-shrink: 0;
+          border-radius: 31px;
+          background: #fff;
+          border: none;
+          outline: none;
+          margin-top: 15px;
+          padding-left: 28px;
+        }
+        button {
+          width: 156px;
+          height: 54px;
+          flex-shrink: 0;
+          border-radius: 31px;
+          background: #f58a07;
+          border: none;
+          outline: none;
+          color: white;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          @include poppins;
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+  .footer-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+  .footer-right {
+    position: absolute;
+    right: 0;
+    top: 50px;
+  }
+}
+
+// Footer
