--- a/css/about.css
+++ b/css/about.css
@@ -28,7 +28,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: 30px;
-  width: 510px;
+  width: 80%;
 }
 .about-header .container .about-left button {
   width: 171px;
@@ -45,13 +45,25 @@
   width: 48%;
   position: relative;
   height: 650px;
-  background-image: url("../../assets/images/Ja'farxon_imaags/about/about.png");
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 20px;
 }
-.about-header .container .about-right img {
+.about-header .container .about-right .bacground-about {
+  border-radius: 18px;
+  width: 100%;
+  height: 650px;
+  max-width: 100%;
+  flex-shrink: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.about-header .container .about-right .left-about-bg {
   mix-blend-mode: multiply;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
 }
 .about-header .container .about-right .about-c {
   position: absolute;
@@ -129,20 +141,20 @@
   padding-top: 10px;
 }
 
-.about-section {
+.about-sectionn {
   width: 100%;
 }
-.about-section .container {
+.about-sectionn .container {
   padding-bottom: 100px;
   display: flex;
   justify-content: space-between;
 }
-.about-section .container .about-section-left {
+.about-sectionn .container .about-section-left {
   width: 48%;
   display: flex;
   align-items: center;
 }
-.about-section .container .about-section-left div h1 {
+.about-sectionn .container .about-section-left div h1 {
   color: #0d1317;
   font-family: "Poppins", sans-serif;
   font-size: 48px;
@@ -151,7 +163,7 @@
   line-height: 56px;
   letter-spacing: -1.44px;
 }
-.about-section .container .about-section-left div p {
+.about-sectionn .container .about-section-left div p {
   color: #5b5b5b;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
@@ -161,7 +173,7 @@
   width: 510px;
   padding-top: 20px;
 }
-.about-section .container .about-section-right {
+.about-sectionn .container .about-section-right {
   width: 48%;
   background-image: url("../../assets/images/Ja'farxon_imaags/about/about-s-b.png");
   height: 667px;
@@ -169,7 +181,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.about-section .container .about-section-right img {
+.about-sectionn .container .about-section-right img {
   position: absolute;
   bottom: -35px;
   right: -35px;
