--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 .header {
   width: 100%;
-  height: 200px;
   background: #dceaf5;
   height: 703px;
 }
@@ -182,24 +181,6 @@
   padding-left: 5px;
 }
 
-::-webkit-scrollbar {
-  -webkit-transition: 0.3s all ease;
-  transition: 0.3s all ease;
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgb(174, 168, 168);
-  border-radius: 10px;
-  height: 200px;
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-  cursor: pointer;
-}
-
 .feaures-section {
   width: 100%;
   background: #edf7ff;
@@ -311,9 +292,11 @@
   width: 100%;
   display: flex;
   padding-top: 50px;
+  justify-content: space-between;
 }
 .about-section .container .about-section-left .section-left-bottom .left-left {
-  width: 50%;
+  width: 48%;
+  margin-right: 10px;
 }
 .about-section .container .about-section-left .section-left-bottom .left-left h3 {
   color: #0d1317;
@@ -333,9 +316,11 @@
   font-weight: 500;
   line-height: 28px;
   padding-top: 10px;
+  text-align: left;
 }
 .about-section .container .about-section-left .section-left-bottom .left-right {
-  width: 50%;
+  width: 48%;
+  margin-left: 10px;
 }
 .about-section .container .about-section-left .section-left-bottom .left-right h3 {
   color: #0d1317;
@@ -355,14 +340,23 @@
   font-weight: 500;
   line-height: 28px;
   padding-top: 10px;
+  text-align: left;
 }
 .about-section .container .about-section-right {
   position: relative;
   width: 50%;
   height: 690px;
-  background-image: url("../../assets/images/Ja'farxon_imaags/orangimg/about.png");
+  flex-shrink: 0;
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 12px;
+}
+.about-section .container .about-section-right .a-b {
+  max-width: 100%;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 690px;
   border-radius: 12px;
 }
 .about-section .container .about-section-right .left-img {
@@ -370,6 +364,8 @@
   background: #f58a07;
   mix-blend-mode: multiply;
   border-radius: 12px 0 0 12px;
+  position: absolute;
+  left: 0;
 }
 .about-section .container .about-section-right .right-logo {
   position: absolute;
@@ -485,12 +481,25 @@
   padding-left: 10px;
 }
 .service-section .container .service-section-bottom .section-bottom-right {
+  position: relative;
   width: 45%;
   height: 466px;
-  background-image: url("../../assets/images/Ja'farxon_imaags/orangimg/Imageser.png");
-  background-repeat: no-repeat;
-  background-size: cover;
   border-radius: 22px;
+}
+.service-section .container .service-section-bottom .section-bottom-right .servir-bg {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  flex-shrink: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 22px;
+}
+.service-section .container .service-section-bottom .section-bottom-right .s-left {
+  mix-blend-mode: multiply;
+  position: absolute;
+  top: 0 !important;
+  left: 0;
 }
 
 .Cta-section {
@@ -500,10 +509,19 @@
 }
 .Cta-section .Cta-section-left {
   width: 50%;
-  background-image: url("../../assets/images/Ja'farxon_imaags/orangimg/cta.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 518px;
+  flex-shrink: 0;
+}
+.Cta-section .Cta-section-left img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 518px;
+  max-width: 100%;
+  flex-shrink: 0;
+  object-fit: cover;
 }
 .Cta-section .Cta-section-right {
   width: 50%;
@@ -576,8 +594,16 @@
   width: 46%;
   position: relative;
   height: 501px;
-  background-image: url("../../assets/images/Ja'farxon_imaags/orangimg/v-2.png");
   border-radius: 0 18px 18px 0;
+  max-width: 100%;
+}
+.video-section .container .video-right .video-bg {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 18px;
 }
 .video-section .container .video-right .play {
   display: flex;
