--- a/sass/pages/about.scss
+++ b/sass/pages/about.scss
@@ -31,7 +31,7 @@
         font-style: normal;
         font-weight: 500;
         line-height: 30px;
-        width: 510px;
+        width: 80%;
       }
       button {
         width: 171px;
@@ -49,12 +49,25 @@
       width: 48%;
       position: relative;
       height: 650px;
-      background-image: url("../../assets/images/Ja'farxon_imaags/about/about.png");
+      // background-image: url("../../assets/images/Ja'farxon_imaags/about/about.png");
       background-repeat: no-repeat;
       background-size: cover;
       border-radius: 20px;
-      img {
+      .bacground-about {
+        border-radius: 18px;
+
+        width: 100%;
+        height: 650px;
+        max-width: 100%;
+        flex-shrink: 0;
+        object-fit: cover;
+      }
+      .left-about-bg {
         mix-blend-mode: multiply;
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
       }
       .about-c {
         position: absolute;
@@ -136,7 +149,7 @@
 // Features Section
 
 // About Section
-.about-section {
+.about-sectionn {
   width: 100%;
   .container {
     padding-bottom: 100px;
