--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@use "./about-medi.scss";
+@use "./about.scss";
+@use "./hom-medi.scss";
 
 // Header
 
